# Neolithic

./: CMakeLists.txt  FILE_HEADER.TXT  README.md  main.c
codegen/: call_stack.c  call_stack.h  eval_expr.c  eval_expr.h  flatten_tree.c  flatten_tree.h  gen_alloc.c  gen_alloc.h  gen_asmcode.c  gen_asmcode.h  gen_calltree.c  gen_calltree.h  gen_code.c  gen_code.h  gen_common.c  gen_common.h  gen_symbols.c  gen_symbols.h  type_checker.c  type_checker.h
common/: common.c  common.h  tree_walker.c  tree_walker.h
cpu_arch/: CPU Architecture module.txt  asm_code.c  asm_code.h  instrs.c  instrs.h  instrs_math.c  instrs_math.h  instrs_opt.c  instrs_opt.h
data/: bank_layout.c  bank_layout.h  func_map.c  func_map.h  identifiers.c  identifiers.h  instr_list.c  instr_list.h  labels.c  labels.h  symbols.c  symbols.h  syntax_tree.c  syntax_tree.h  type_list.c  type_list.h
docs/: Neolithic 6502 Code Generation Notes.txt  Neolithic Compiler Guide.txt  Neolithic Language Guide.txt  TODO.txt
machine/: Machine module.txt  machine.c  machine.h  mem.c  mem.h
optimizer/: gen_opttree.c  gen_opttree.h  optimizer.c  optimizer.h
output/: output_block.c  output_block.h  output_manager.c  output_manager.h  write_bin.c  write_dasm.c  write_output.c  write_output.h
parser/: Parser module.txt  parse_asm.c  parse_asm.h  parse_directives.c  parse_directives.h  parser.c  parser.h  preprocess.c  preprocess.h  tokenize.c  tokenize.h  tokenize.s  tokens.c  tokens.h
test/: t_parser.c  test_alias.c  test_array.c  test_const.c  test_echo.c  test_enum.c  test_expr.c  test_page_crossing.c  test_pointers.c  test_reg_tracker.c  test_stmt_cnt.c  test_struct.c  test_union.c  test_var_alloc.c  test_var_size.c  test_words.c
